Cleans up console output